--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "lodash": "4.17.20"
+    "lodash": "4.17.21"  //Fix Vulnerability - change version from 4.17.20 to 4.17.21
   },
   "devDependencies": {
     "chai": "^4.4.1",
